...
            Spacer(Modifier.height(24.dp))

            OutlinedButton(
                onClick = {
                    val text = buildString {
                        appendLine("Liteschreib IKII")
                        appendLine("Élève : ${utilisateur.nomAffiche}")
                        appendLine("Classe : ${utilisateur.classe}")
                        appendLine("Identifiant : ${utilisateur.identifiant}")
                        appendLine("Mot de passe : ${utilisateur.motDePasse}")
                    }

                    copyToClipboard(
                        context,
...
